BUG: 116339

Fix reported compilation problems with some 64-bit architectures.


svn path=/branches/KDE/3.5/kdenetwork/kopete/; revision=480399